# trailer

./: .gitignore  README.md  generate_exam_doc.py  pyproject.toml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  hiking_planner.py  tools.py
app/models/: __init__.py  hiking.py
app/providers/: __init__.py  dashscope_multimodal.py  elevation.py  guide_reference.py  juhe_mcp.py  llm.py  places.py  route_discovery.py  transport.py  travel_research.py  weather.py
app/services/: __init__.py  coordinates.py  geo.py  route_analysis.py  route_ingestion.py  route_knowledge.py  route_knowledge_import.py  route_knowledge_seed.py  route_planner.py  route_recommendations.py
app/static/: index.html
config/: settings.toml
docs/: DEVELOPMENT_ROADMAP.md  PORTFOLIO_SYSTEM_DESIGN.md  PROJECT_STATUS.md
scripts/: test_dashscope_multimodal.py
tests/: test_config.py  test_dashscope_multimodal.py  test_guide_reference_provider.py  test_hiking_agent.py  test_hiking_guide_stream_api.py  test_juhe_mcp_provider.py  test_llm_health_api.py  test_llm_provider.py  test_route_analysis.py  test_route_ingestion.py  test_route_knowledge.py  test_route_planner.py  test_route_recommendations.py  test_transport_provider.py  test_travel_research_provider.py  test_weather_forecast_api.py  test_weather_provider.py
