[project]
name = "trailer"
version = "0.1.0"
description = "A hiking guide agent with elastic route ingestion and planning."
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.20.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.60",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
